<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnInicioRegistro"
        android:layout_width="344dp"
        android:layout_height="67dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="333dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/lightblueColor"
        android:text="@string/InicioRegistro" />

    <Button
        android:id="@+id/btnAyuda"
        android:layout_width="344dp"
        android:layout_height="67dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="492dp"
        android:layout_marginEnd="26dp"
        android:backgroundTint="@color/lightblueColor"
        android:text="@string/ayuda" />

    <Button
        android:id="@+id/btnEstadisticas"
        android:layout_width="344dp"
        android:layout_height="67dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/lightblueColor"
        android:text="@string/estadisticas" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="49dp"
        android:text="@string/Title"
        android:textColor="@color/black"
        android:textColorHint="@color/white"


        android:textSize="25dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="248dp"
        android:layout_height="154dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="74dp"
        app:srcCompat="@drawable/purepng_com_sticy_notesnotessticy_notespaperklebezettelstick_paper_551521126259xov3h" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="119dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="140dp"
        android:text="@string/promedio"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

</RelativeLayout>


