<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Estadisticas">

    <TextView
        android:id="@+id/txtEstadisticaEstudiantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="74dp"
        android:text="@string/estadisticasEstudiantes"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="49dp" />

    <TextView
        android:id="@+id/txtCantEstudiantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="43dp"
        android:text="@string/cantidadEstudiantes"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="41dp"
        android:text="@string/cantidadEstudiantesganan"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="46dp"
        android:text="@string/cantidadEstudiantespierden"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="454dp"
        android:layout_marginEnd="40dp"
        android:text="@string/cantidadEstudiantesrecuperan"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtNumcantidadEstudiantes"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="44dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="InvalidId" />

    <TextView
        android:id="@+id/txtNumcantidadEstudiantesganan"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="307dp"
        android:layout_marginEnd="41dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="InvalidId" />

    <TextView
        android:id="@+id/txtNumcantidadEstudiantespierden"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="41dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="InvalidId" />

    <TextView
        android:id="@+id/txtNumcantidadEstudiantesrecuperan"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="518dp"
        android:layout_marginEnd="42dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="InvalidId" />

    <ImageView
        android:id="@+id/iconSalir"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="322dp"
        android:rotationY="-180"
        app:srcCompat="@drawable/arror" />
</RelativeLayout>